[package]
name = "rust_aoc"
version = "0.1.0"
edition = "2021"
authors = ["Flavio Esteves <flavioafesteves@gmail.com>"]


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
